fixed logo height to be 1px too high so next sprite is seen

--- a/client/landing/stylus/app.login-signup.styl
+++ b/client/landing/stylus/app.login-signup.styl
@@ -216,7 +216,7 @@ app.login-signup.styl
     z-index               20002
   .logo
     text-indent           -9999px
-    size                  140px,40px
+    size                  140px,39px
     margin-left           1px
     cursor                pointer
     blockMid()
